--- a/package.json
+++ b/package.json
@@ -7,5 +7,7 @@
     , "ejs": ">= 0.0.1"
 	, "request: "2.9.202"
 	, "xml-simple": "0.0.1"
+	, "passport": "0.1.8"
+	, "passport-local": "0.1.2"
   }
 }
