--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   , "private": true
   , "dependencies": {
       "express": "2.5.8"
-    , "ejs": ">= 0.0.1"
+    , "ejs": "0.0.1"
 	, "request": "2.9.202"
 	, "xml-simple": "0.0.1"
 	, "passport": "0.1.8"
