--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
 	, "xml-simple": "0.0.1"
 	, "passport": "0.1.8"
 	, "passport-local": "0.1.2"
+	, "socket.io" : "0.9.6"
+	, "redis" : "0.7.2"
+	, "hiredis" : "0.1.14"
   }
 }
