--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,21 @@ data/feed.xml
 data/feed.xml
 
 public/data/feed.xml
+
+public/data/bar_feed.xml
+
+public/data/ddddddd_feed.xml
+
+public/data/foo_feed.xml
+
+public/data/ffffff_feed.xml
+
+public/data/foof_feed.xml
+
+public/data/j_feed.xml
+
+public/data/juve_feed.xml
+
+public/data/liverpool_feed.xml
+
+public/data/roma_feed.xml
